fix z-indexes

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,5 @@
 .header {
-    z-index: 9999999999999999999 !important;
+    z-index: 1000 !important;
     height: 2rem;
     padding: 2.5rem 1rem 3rem 3rem;
     display: flex;
