--- a/src/pages/Product/Product.scss
+++ b/src/pages/Product/Product.scss
@@ -4,6 +4,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    position: relative;
+    z-index: 1;
 }
 
 .product_page_inner_container {
